# KritiDocX

./: .gitignore  404.html  LICENSE  MANIFEST.in  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
.github/: FUNDING.yml
configuration-api/: index.html
demo_lab/: get_screenshot.py  run_test.py
demo_lab/my_data/: math_and_science.md  payload_data.md
demo_lab/my_layouts/: 01_standard_report.html  02_complex_table.html  03_corporate_layout.html  04_interactive_form.html  hero_shot.html
docs/: configuration-api.md  getting-started.md  hybrid-mode.md  index.md  interactive-forms.md  media-layouts.md  scientific-math.md  tables-matrix.md  troubleshooting.md  typography.md
getting-started/: index.html
hybrid-mode/: index.html
interactive-forms/: index.html
kritidocx/: __init__.py  exceptions.py
kritidocx/basics/: __init__.py  border_parser.py  color_manager.py  css_parser.py  font_handler.py  gradient_handler.py  shadow_parser.py  unit_converter.py
kritidocx/config/: __init__.py  constants.py  settings.py  theme.py
kritidocx/core/: __init__.py  docx_driver.py  pipeline.py  router.py
kritidocx/css_engine/: __init__.py  main.py  tokenizer.py
kritidocx/objects/: __init__.py
kritidocx/parsers/: __init__.py  html_parser.py  markdown_parser.py  sanitizer.py
kritidocx/utils/: __init__.py  file_manager.py  logger.py  performance.py  style_filter.py
media-layouts/: index.html
scientific-math/: index.html
search/: search_index.json
tables-matrix/: index.html
troubleshooting/: index.html
typography/: index.html
(+53 files in other folders)
