[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kritidocx"
version = "0.1.0.dev7"
authors = [
  { name="KritiDocX Team", email="kritidocx@gmail.com" },
]
description = "Professional HTML-to-Word generation engine with OMML Math support."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }

# यहाँ है असली जादू! यह pip को बताएगा कि इसके साथ क्या-क्या इन्स्टॉल करना है
dependencies = [
    "python-docx>=0.8.11",
    "beautifulsoup4>=4.9.0",
    "lxml>=4.6.0",
    "Pillow>=8.0.0",
    "requests>=2.25.0",
    "Markdown>=3.3.0",
    "psutil>=5.8.0",
    "latex2mathml>=1.9.0"
]

[project.urls]
"Homepage" = "https://github.com/hoffawhy/KritiDocX"
"Documentation" = "https://hoffawhy.github.io/KritiDocX/"
"Live Demo" = "https://kritidocx.hoffawhy.com"
"Bug Tracker" = "https://github.com/hoffawhy/KritiDocX/issues"